# SolidMesh

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
app/: CMakeLists.txt  main.cpp
assets/: Ankle_1.vtk  bpgc.vtk  s01u_cube_cleaned.vtk  s07u_notch.vtk  s07u_notch_cleaned.vtk
example/: main.cpp
include/: CMakeLists.txt  TopologyOperations.cpp  TopologyOperations.h
include/mesh/: CellTopology.h  MeshEntities.h  MeshIO.h  PolyhedraMesh.cpp  PolyhedraMesh.h
include/solidmesh/: topology_operations.cpp  topology_operations.h
include/solidmesh/math/: geometry_utils.h  utils.h
include/solidmesh/mesh/: cell_topology.h  edge_iterator.h  entity_pool.h  face_key.h  handles.h  io_helper.h  mesh_elements.h  mesh_entities.h  mesh_io.cpp  mesh_io.h  polyhedra_mesh.cpp  polyhedra_mesh.h  polyhedral_mesh.h
src/: CMakeLists.txt  mesh_io.cpp  polyhedra_mesh.cpp  polyhedral_mesh.cpp  utils.cpp
src/linear-algebra/: vector3.h  vector3.inl
src/math/: geometry_utils.cpp
src/mesh/: CellTopology.h  EdgeIterator.h  Handles.h  MeshEntities.h  MeshIO.cpp  PolyhedraMesh.cpp  PolyhedraMesh.h  SlotMap.h  TopologyOps.cpp  TopologyOps.h  io_helper.cpp  mesh_io.cpp  polyhedral_mesh.cpp
