cmake_minimum_required(VERSION 3.10)
project(SolidMesh VERSION 0.1.0 LANGUAGES CXX)

if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
endif()
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    set(SOLIDMESH_TOP_LEVEL ON)
else()
    set(SOLIDMESH_TOP_LEVEL OFF)
endif()

option(SOLIDMESH_BUILD_APP "Build the SolidMesh sample app." ${SOLIDMESH_TOP_LEVEL})

set(SOLIDMESH_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(src)

if(SOLIDMESH_BUILD_APP)
    add_subdirectory(app)
endif()
